# housemdchatbot-backend

./: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/: websocket.py
app/core/: llm.py  rag.py
app/core/utils/: datetime.py  house.py  websocket_helpers.py
app/schemas/: chat.py
tests/: conftest.py  manual_run_of_agent.py  test.main.py  test_config.py  test_dependencies.py
tests/api/: test_websocket.py
tests/core/: test_llm.py  test_rag.py
tests/core/utils/: test_websocket_helpers.py
